Security/pod-securitycontext.yml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod
  labels:
    app: myapp
spec:
  securityContext:
    runAsUser: 1000
    capabilities:
      add: ["MAC_ADMIN"]
  containers:
    - name: nginx
      image: nginx
